sand-macros/tests/cases/fail_function_missing_path.rs
use sand_macros::function;

#[function("ns:")]
fn bad() {}

fn main() {}
